# aliazer

./: LICENSE  PLANNED2.md  README.md  pyproject.toml
src/: config.py  main.py  models.py  stats.py  suggester.py  writer.py
src/analyzer/: exact.py  pattern.py
src/history/: normalizer.py  parser.py
src/ui/: interactive.py  simple.py
tests/: test_analyzer.py  test_config.py  test_history_parser.py  test_pattern.py
