[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aliazer"
version = "0.4.0"
description = "Analyze shell history and suggest aliases"
requires-python = ">=3.11"

[project.scripts]
aliazer = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
