[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aliazer"
version = "0.4.0"
description = "Analyze shell history and suggest aliases"
requires-python = ">=3.11"

[project.scripts]
aliazer = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
